# AndroidStudy

./: CMakeLists.txt  build.gradle  keystore  readme  settings.gradle  变更说明
BroadcastBestPractice/: build.gradle
BroadcastBestPractice/src/main/: AndroidManifest.xml
BroadcastTest/: build.gradle
BroadcastTest/src/main/: AndroidManifest.xml
BroadcastTest2/: build.gradle
BroadcastTest2/src/main/: AndroidManifest.xml
DataBaseTest/: build.gradle
DataBaseTest/src/main/: AndroidManifest.xml
DownloadTest/: CMakeLists.txt  build.gradle  newland_keystore.jks
DownloadTest/src/main/: AndroidManifest.xml
DownloadTest/src/main/c/: ndk.h  sdtp.h  sdtpNlupdate-yanm.c  sdtpNlupdate.c  tools.h
DownloadTest/src/main/java/com/example/downloadtest/: DownFile.java  DownLoadFile.java  MainActivity.java
DownloadTest/src/main/java/com/updatedemo/util/: ApplicationException.java  ApplicationUtil.java  BCDUtil.java  BytesUtils.java  CertificateList.java  DataConstant.java  DigestUtils.java  Dump.java  FileUtil.java  LinuxCmd.java  NdkApi.java  RomHelp.java  SerialManager.java  SystemPropertyUtil.java
DownloadTest/src/main/jni/: digest.h  jni_download_from_pc.c  jni_usePosNdk.c  posNdk.c
DownloadTest/src/main/res/layout/: activity_main.xml
FilePersistenceTest/: build.gradle
FilePersistenceTest/src/main/: AndroidManifest.xml
FragmentBestPractice/: build.gradle
FragmentBestPractice/src/main/: AndroidManifest.xml
FragmentTest/: build.gradle
FragmentTest/src/main/: AndroidManifest.xml
ListViewTest/: build.gradle
NotificationTest/: build.gradle
NotificationTest/src/main/: AndroidManifest.xml
RecyclerViewTest/: build.gradle
RecyclerViewTest/src/main/: AndroidManifest.xml
RuntimePermissionTest/: build.gradle
SharedPreferencesTest/: build.gradle
UIBestPractice/: build.gradle
demo/: build.gradle
downFile/: build.gradle
downloadFile/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
release/: output.json  下载工具材料.rar
release/下载工具材料/: Download-V1.0.4-20210811-release.apk  变更说明
src/main/: AndroidManifest.xml
src/main/jni/: ZGYLPARA.ini  arq.h  (+46 more)
testjar/: build.gradle
(+128 files in other folders)
